--- a/src/css/index.css
+++ b/src/css/index.css
@@ -67,3 +67,6 @@
     border-radius: 50%;
     box-shadow: -80px 0 0 80px #097b83;
 }
+input:checked ~ .toggle-input-dot {
+    transform: translateX(100%);
+}
